crates/oxc_codegen/tests/integration/snapshots/astro/nested_head_content_stays_in_the_head.snap
---
source: crates/oxc_codegen/tests/integration/astro.rs
---
### Input
---
const meta = { title: 'My App' };
---

<html>
    <head>
        <meta charset="utf-8" />

        {
            meta && <title>{meta.title}</title>
        }

        <meta name="after">
    </head>
    <body>
        <h1>My App</h1>
    </body>
</html>

### Expected (Go compiler)
import {
  Fragment,
  render as $$render,
  createAstro as $$createAstro,
  createComponent as $$createComponent,
  renderComponent as $$renderComponent,
  renderHead as $$renderHead,
  maybeRenderHead as $$maybeRenderHead,
  unescapeHTML as $$unescapeHTML,
  renderSlot as $$renderSlot,
  mergeSlots as $$mergeSlots,
  addAttribute as $$addAttribute,
  spreadAttributes as $$spreadAttributes,
  defineStyleVars as $$defineStyleVars,
  defineScriptVars as $$defineScriptVars,
  renderTransition as $$renderTransition,
  createTransitionScope as $$createTransitionScope,
  renderScript as $$renderScript,
  createMetadata as $$createMetadata
} from "http://localhost:3000/";

export const $$metadata = $$createMetadata(import.meta.url, { modules: [], hydratedComponents: [], clientOnlyComponents: [], hydrationDirectives: new Set([]), hoisted: [] });

const $$Component = $$createComponent(($$result, $$props, $$slots) => {

const meta = { title: "My App" };

return $$render`<html>
    <head>
        <meta charset="utf-8">

        ${
            meta && $$render`<title>${meta.title}</title>`
        }

        <meta name="after">
    ${$$renderHead($$result)}</head>
    <body>
        <h1>My App</h1>
    </body></html>`;
}, undefined, undefined);
export default $$Component;

### Actual (Oxc)
import {
  Fragment,
  render as $$render,
  createAstro as $$createAstro,
  createComponent as $$createComponent,
  renderComponent as $$renderComponent,
  renderHead as $$renderHead,
  maybeRenderHead as $$maybeRenderHead,
  unescapeHTML as $$unescapeHTML,
  renderSlot as $$renderSlot,
  mergeSlots as $$mergeSlots,
  addAttribute as $$addAttribute,
  spreadAttributes as $$spreadAttributes,
  defineStyleVars as $$defineStyleVars,
  defineScriptVars as $$defineScriptVars,
  renderTransition as $$renderTransition,
  createTransitionScope as $$createTransitionScope,
  renderScript as $$renderScript,
  createMetadata as $$createMetadata
} from "http://localhost:3000/";

export const $$metadata = $$createMetadata(import.meta.url, { modules: [], hydratedComponents: [], clientOnlyComponents: [], hydrationDirectives: new Set([]), hoisted: [] });

const $$Component = $$createComponent(($$result, $$props, $$slots) => {

const meta = { title: "My App" };

return $$render`<html>
    <head>
        <meta charset="utf-8">

        ${meta && $$render`<title>${meta.title}</title>`}

        <meta name="after">
    ${$$renderHead($$result)}</head>
    <body>
        <h1>My App</h1>
    </body>
</html>`;
}, undefined, undefined);
export default $$Component;

